--- a/packages/cards/package.json
+++ b/packages/cards/package.json
@@ -18,9 +18,7 @@
   "scripts": {
     "build": "tsc -b && vite build",
     "lint": "eslint . --ignore-pattern 'dist/**'",
-    "format": "prettier --write .",
-    "test": "vitest run",
-    "test:watch": "vitest"
+    "format": "prettier --write ."
   },
   "dependencies": {
     "@uiid/icons": "workspace:*",
