--- a/packages/utils/package.json
+++ b/packages/utils/package.json
@@ -20,9 +20,7 @@
   "scripts": {
     "build": "tsc -b && vite build",
     "lint": "eslint . --ignore-pattern 'dist/**'",
-    "format": "prettier --write .",
-    "test": "vitest run",
-    "test:watch": "vitest"
+    "format": "prettier --write ."
   },
   "dependencies": {
     "cva": "^1.0.0-beta.4",
