--- a/packages/forms/package.json
+++ b/packages/forms/package.json
@@ -19,9 +19,7 @@
   "scripts": {
     "build": "tsc -b && vite build",
     "lint": "eslint . --ignore-pattern 'dist/**'",
-    "format": "prettier --write .",
-    "test": "vitest run",
-    "test:watch": "vitest"
+    "format": "prettier --write ."
   },
   "dependencies": {
     "@base-ui/react": "1.0.0",
