chore: create lists package

--- a/apps/next-16/package.json
+++ b/apps/next-16/package.json
@@ -18,6 +18,7 @@
     "@uiid/indicators": "workspace:*",
     "@uiid/interactive": "workspace:*",
     "@uiid/layout": "workspace:*",
+    "@uiid/lists": "workspace:*",
     "@uiid/navigation": "workspace:*",
     "@uiid/overlays": "workspace:*",
     "@uiid/tables": "workspace:*",
