--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "@uiid/design-system",
   "private": true,
   "version": "0.0.0",
+  "license": "MIT",
   "type": "module",
   "scripts": {
     "build": "turbo build",
