--- a/packages/overlays/package.json
+++ b/packages/overlays/package.json
@@ -1,6 +1,7 @@
 {
   "name": "@uiid/overlays",
   "version": "0.0.0",
+  "license": "MIT",
   "type": "module",
   "main": "./dist/index.js",
   "module": "./dist/index.js",
