--- a/package.json
+++ b/package.json
@@ -23,7 +23,8 @@
     "release": "changeset publish",
     "build-changelog": "node scripts/build-changelog.cjs",
     "sync-changelog": "pnpm run build-changelog",
-    "prepare": "husky"
+    "prepare": "husky",
+    "postinstall": "playwright install chromium --with-deps"
   },
   "devDependencies": {
     "@changesets/changelog-github": "^0.5.1",
@@ -41,6 +42,7 @@
     "globals": "^16.4.0",
     "happy-dom": "^15.11.6",
     "husky": "^9.1.7",
+    "playwright": "^1.57.0",
     "prettier": "3.6.2",
     "turbo": "^2.5.8",
     "typescript": "~5.8.3",
