chore: tests, docs updates

--- a/package.json
+++ b/package.json
@@ -11,6 +11,8 @@
     "format": "turbo format",
     "test": "vitest",
     "test:run": "vitest run",
+    "test:verbose": "vitest run --reporter=verbose",
+    "test:ui": "vitest --ui",
     "preview": "vite preview",
     "storybook": "turbo storybook",
     "build-storybook": "turbo build-storybook",
