--- a/packages/interactive/package.json
+++ b/packages/interactive/package.json
@@ -23,6 +23,10 @@
   },
   "dependencies": {
     "@base-ui/react": "1.0.0",
+    "@dnd-kit/core": "^6.3.1",
+    "@dnd-kit/modifiers": "^9.0.0",
+    "@dnd-kit/sortable": "^10.0.0",
+    "@dnd-kit/utilities": "^3.2.2",
     "@tiptap/extension-code-block-lowlight": "^3.14.0",
     "@tiptap/extension-color": "^3.14.0",
     "@tiptap/extension-horizontal-rule": "^3.14.0",
