--- a/apps/next-16/package.json
+++ b/apps/next-16/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@icons-pack/react-simple-icons": "^13.8.0",
+    "@uiid/backgrounds": "workspace:*",
     "@uiid/buttons": "workspace:*",
     "@uiid/calendars": "workspace:*",
     "@uiid/cards": "workspace:*",
