build: begin versioning

--- a/package.json
+++ b/package.json
@@ -19,11 +19,11 @@
     "changeset": "changeset",
     "changeset:version": "changeset version && pnpm run build-changelog",
     "changeset:release": "changeset && pnpm run changeset:version",
-    "auto-changeset": "node scripts/auto-changeset.cjs",
+    "auto-changeset": "node scripts/auto-changeset.mjs",
     "version-packages": "changeset version && pnpm run build-changelog",
-    "auto-release": "pnpm run auto-changeset && pnpm run version-packages && git add packages/changelog.json apps/docs/changelog.mdx && git commit --amend --no-edit",
+    "auto-release": "pnpm run auto-changeset && pnpm run version-packages && git add packages/changelog.json && git commit --amend --no-edit",
     "release": "changeset publish",
-    "build-changelog": "node scripts/build-changelog.cjs",
+    "build-changelog": "node scripts/build-changelog.mjs",
     "sync-changelog": "pnpm run build-changelog",
     "prepare": "husky",
     "postinstall": "playwright install chromium --with-deps"
