--- a/.changeset/config.json
+++ b/.changeset/config.json
@@ -1,18 +1,22 @@
 {
   "$schema": "https://unpkg.com/@changesets/config@3.1.1/schema.json",
-  "changelog": "@changesets/cli/changelog",
+  "changelog": "./changelog-generator.js",
   "commit": false,
   "fixed": [
     [
-      "@uiid/tokens",
+      "@uiid/backgrounds",
       "@uiid/buttons",
+      "@uiid/calendars",
       "@uiid/cards",
       "@uiid/forms",
       "@uiid/icons",
       "@uiid/indicators",
       "@uiid/interactive",
       "@uiid/layout",
+      "@uiid/lists",
+      "@uiid/navigation",
       "@uiid/overlays",
+      "@uiid/tables",
       "@uiid/tokens",
       "@uiid/typography",
       "@uiid/utils"
@@ -22,5 +26,5 @@
   "access": "restricted",
   "baseBranch": "main",
   "updateInternalDependencies": "patch",
-  "ignore": ["storybook", "docs"]
+  "ignore": ["storybook", "next-16"]
 }
