--- a/.github/workflows/test-changed-packages.yml
+++ b/.github/workflows/test-changed-packages.yml
@@ -44,16 +44,18 @@ jobs:
       - name: Setup Turbo cache
         uses: actions/cache@v4
         with:
-          path: .turbo
-          key: ${{ runner.os }}-turbo-${{ github.sha }}
+          path: |
+            node_modules/.cache/turbo
+            packages/*/dist
+          key: ${{ runner.os }}-turbo-build-${{ hashFiles('packages/*/src/**', 'packages/*/package.json') }}
           restore-keys: |
-            ${{ runner.os }}-turbo-
+            ${{ runner.os }}-turbo-build-
 
       - name: Install dependencies
         run: pnpm install --frozen-lockfile
 
       - name: Build packages
-        run: pnpm build
+        run: pnpm build --cache-dir=node_modules/.cache/turbo
 
       - name: Run tests
         run: pnpm test:run
