--- a/apps/storybook/package.json
+++ b/apps/storybook/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@uiid/backgrounds": "workspace:*",
+    "@uiid/blocks": "workspace:*",
     "@uiid/buttons": "workspace:*",
     "@uiid/calendars": "workspace:*",
     "@uiid/cards": "workspace:*",
