fix: remove build from test action, use client new hooks

--- a/.github/workflows/test-changed-packages.yml
+++ b/.github/workflows/test-changed-packages.yml
@@ -61,7 +61,7 @@ jobs:
         run: pnpm install --frozen-lockfile
 
       - name: Build packages
-        run: pnpm build
+        run: pnpm build --filter='./packages/*'
 
       - name: Run tests
         run: pnpm test:run
