fix: build css tokens before tests

--- a/.github/workflows/test-changed-packages.yml
+++ b/.github/workflows/test-changed-packages.yml
@@ -42,6 +42,9 @@ jobs:
       - name: Install dependencies
         run: pnpm install --frozen-lockfile --ignore-scripts
 
+      - name: Generate tokens
+        run: node scripts/generate-tokens.cjs
+
       - name: Run tests
         run: pnpm test:run
 
