--- a/.github/workflows/version-tag.yml
+++ b/.github/workflows/version-tag.yml
@@ -43,7 +43,7 @@ jobs:
             ${{ runner.os }}-pnpm-store-
 
       - name: Install dependencies
-        run: pnpm install --frozen-lockfile
+        run: pnpm install --frozen-lockfile --ignore-scripts
 
       - name: Get package version
         id: package-version
