refactor: json-render

--- a/apps/json-render/package.json
+++ b/apps/json-render/package.json
@@ -15,6 +15,7 @@
     "@uiid/cards": "workspace:*",
     "@uiid/forms": "workspace:*",
     "@uiid/layout": "workspace:*",
+    "@uiid/overlays": "workspace:*",
     "@uiid/registry": "workspace:*",
     "@uiid/tokens": "workspace:*",
     "@uiid/typography": "workspace:*",
