--- a/package.json
+++ b/package.json
@@ -21,7 +21,7 @@
     "changeset:release": "changeset && pnpm run changeset:version",
     "auto-changeset": "node scripts/auto-changeset.mjs",
     "version-packages": "changeset version && pnpm run build-changelog",
-    "auto-release": "pnpm run auto-changeset && pnpm run version-packages && git add packages/changelog.json && git commit --amend --no-edit",
+    "auto-release": "pnpm run auto-changeset && pnpm run version-packages && git add packages/changelog.json packages/changelog-packages.json && git commit --amend --no-edit",
     "release": "changeset publish",
     "build-changelog": "node scripts/build-changelog.mjs",
     "sync-changelog": "pnpm run build-changelog",
