--- a/packages/code/package.json
+++ b/packages/code/package.json
@@ -22,9 +22,14 @@
     "format": "prettier --write ."
   },
   "dependencies": {
-    "shiki": "^3.0.0",
     "@shikijs/langs": "^3.0.0",
-    "@shikijs/themes": "^3.0.0"
+    "@shikijs/themes": "^3.0.0",
+    "@uiid/buttons": "workspace:*",
+    "@uiid/cards": "workspace:*",
+    "@uiid/icons": "workspace:*",
+    "@uiid/layout": "workspace:*",
+    "@uiid/typography": "workspace:*",
+    "shiki": "^3.0.0"
   },
   "peerDependencies": {
     "react": "^19.1.1",
@@ -32,7 +37,6 @@
   },
   "devDependencies": {
     "@uiid/utils": "workspace:*",
-    "@uiid/layout": "workspace:*",
     "@uiid/tokens": "workspace:*",
     "@uiid/icons": "workspace:*",
     "@uiid/buttons": "workspace:*",
