--- a/apps/json-render/package.json
+++ b/apps/json-render/package.json
@@ -13,6 +13,7 @@
     "@json-render/react": "^0.2.0",
     "@uiid/buttons": "workspace:*",
     "@uiid/cards": "workspace:*",
+    "@uiid/code": "workspace:*",
     "@uiid/forms": "workspace:*",
     "@uiid/layout": "workspace:*",
     "@uiid/overlays": "workspace:*",
