chore: add json-render-playground to changeset ignore

--- a/.changeset/config.json
+++ b/.changeset/config.json
@@ -26,5 +26,5 @@
   "access": "restricted",
   "baseBranch": "main",
   "updateInternalDependencies": "patch",
-  "ignore": ["@uiid/storybook", "next-16"]
+  "ignore": ["@uiid/storybook", "next-16", "json-render-playground"]
 }
