--- a/apps/json-render/package.json
+++ b/apps/json-render/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@json-render/core": "^0.2.0",
     "@json-render/react": "^0.2.0",
+    "prettier": "^3.6.0",
     "@uiid/buttons": "workspace:*",
     "@uiid/cards": "workspace:*",
     "@uiid/code": "workspace:*",
