--- a/apps/json-render/package.json
+++ b/apps/json-render/package.json
@@ -16,6 +16,7 @@
     "@uiid/cards": "workspace:*",
     "@uiid/code": "workspace:*",
     "@uiid/forms": "workspace:*",
+    "@uiid/interactive": "workspace:*",
     "@uiid/layout": "workspace:*",
     "@uiid/overlays": "workspace:*",
     "@uiid/registry": "workspace:*",
