--- a/apps/json-render/package.json
+++ b/apps/json-render/package.json
@@ -11,7 +11,6 @@
   "dependencies": {
     "@json-render/core": "^0.2.0",
     "@json-render/react": "^0.2.0",
-    "prettier": "^3.6.0",
     "@uiid/buttons": "workspace:*",
     "@uiid/cards": "workspace:*",
     "@uiid/code": "workspace:*",
@@ -22,18 +21,19 @@
     "@uiid/registry": "workspace:*",
     "@uiid/tokens": "workspace:*",
     "@uiid/typography": "workspace:*",
-    "ai": "^4.3.0",
-    "next": "16.0.1",
-    "react": "19.2.0",
-    "react-dom": "19.2.0",
-    "zod": "^3.24.0"
+    "ai": "^4.3.19",
+    "next": "^16.1.3",
+    "prettier": "^3.8.0",
+    "react": "^19.2.3",
+    "react-dom": "^19.2.3",
+    "zod": "^3.25.76"
   },
   "devDependencies": {
-    "@types/node": "^20",
-    "@types/react": "^19",
-    "@types/react-dom": "^19",
-    "eslint": "^9",
+    "@types/node": "^20.19.30",
+    "@types/react": "^19.2.8",
+    "@types/react-dom": "^19.2.3",
+    "eslint": "^9.39.2",
     "eslint-config-next": "16.0.1",
-    "typescript": "^5"
+    "typescript": "^5.9.3"
   }
 }
