--- a/apps/json-render/package.json
+++ b/apps/json-render/package.json
@@ -9,6 +9,8 @@
     "lint": "eslint"
   },
   "dependencies": {
+    "@ai-sdk/anthropic": "^1.2.12",
+    "@ai-sdk/openai": "^1.3.22",
     "@json-render/core": "^0.2.0",
     "@json-render/react": "^0.2.0",
     "@uiid/buttons": "workspace:*",
