fix: remove stories

--- a/apps/storybook/package.json
+++ b/apps/storybook/package.json
@@ -14,13 +14,16 @@
     "@uiid/buttons": "workspace:*",
     "@uiid/calendars": "workspace:*",
     "@uiid/cards": "workspace:*",
+    "@uiid/code": "workspace:*",
     "@uiid/forms": "workspace:*",
+    "@uiid/icons": "workspace:*",
     "@uiid/indicators": "workspace:*",
     "@uiid/interactive": "workspace:*",
     "@uiid/layout": "workspace:*",
     "@uiid/lists": "workspace:*",
     "@uiid/navigation": "workspace:*",
     "@uiid/overlays": "workspace:*",
+    "@uiid/tables": "workspace:*",
     "@uiid/tokens": "workspace:*",
     "@uiid/typography": "workspace:*"
   },
