feat: markdown docs

--- a/apps/docs/package.json
+++ b/apps/docs/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@icons-pack/react-simple-icons": "^13.8.0",
+    "@shikijs/rehype": "^3.21.0",
     "@uiid/backgrounds": "workspace:*",
     "@uiid/buttons": "workspace:*",
     "@uiid/calendars": "workspace:*",
@@ -29,6 +30,7 @@
     "@uiid/typography": "workspace:*",
     "@uiid/utils": "workspace:*",
     "next": "^16.1.3",
+    "next-mdx-remote": "^5.0.0",
     "react": "^19.2.3",
     "react-dom": "^19.2.3"
   },
