--- a/packages/registry/package.json
+++ b/packages/registry/package.json
@@ -17,6 +17,8 @@
   ],
   "scripts": {
     "build": "tsc -b && vite build",
+    "dev": "tsc -b && vite build",
+    "watch": "tsc -b --watch & vite build --watch",
     "lint": "eslint . --ignore-pattern 'dist/**'",
     "format": "prettier --write ."
   },
@@ -38,7 +40,7 @@
     "prettier": "3.6.2",
     "typescript": "~5.8.3",
     "typescript-eslint": "^8.34.1",
-    "vite": "^7.0.0",
+    "vite": "^7.1.11",
     "vite-plugin-dts": "^4.3.0",
     "vite-tsconfig-paths": "^5.1.4"
   }
