fix: preview link to playground

--- a/apps/json-render/package.json
+++ b/apps/json-render/package.json
@@ -18,6 +18,7 @@
     "@uiid/code": "workspace:*",
     "@uiid/forms": "workspace:*",
     "@uiid/icons": "workspace:*",
+    "@uiid/indicators": "workspace:*",
     "@uiid/interactive": "workspace:*",
     "@uiid/layout": "workspace:*",
     "@uiid/lists": "workspace:*",
