--- a/apps/playground/package.json
+++ b/apps/playground/package.json
@@ -32,6 +32,7 @@
     "prettier": "^3.8.1",
     "react": "^19.2.3",
     "react-dom": "^19.2.3",
+    "rxdb": "^16.21.1",
     "zod": "^4.3.6",
     "zustand": "^5.0.10"
   },
