feat: add text to separator

--- a/apps/playground/package.json
+++ b/apps/playground/package.json
@@ -22,6 +22,7 @@
     "@uiid/interactive": "workspace:*",
     "@uiid/layout": "workspace:*",
     "@uiid/lists": "workspace:*",
+    "@uiid/navigation": "workspace:*",
     "@uiid/overlays": "workspace:*",
     "@uiid/registry": "workspace:*",
     "@uiid/tokens": "workspace:*",
