--- a/apps/playground/package.json
+++ b/apps/playground/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@ai-sdk/anthropic": "^3.0.34",
+    "@icons-pack/react-simple-icons": "^13.8.0",
     "@ai-sdk/openai": "^3.0.24",
     "@json-render/core": "^0.3.0",
     "@json-render/react": "^0.2.0",
